[package]
name = "wasm_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "MouseEvent",
    "HtmlElement",
    "Element",
    "CanvasGradient",
] }
js-sys = "0.3"
